--- a/_includes/loader.html
+++ b/_includes/loader.html
@@ -1,5 +1,5 @@
 <div class="preloader">
   <div class="loader">
-    <span>Loading</span>
+    <span>稍等哦! Loading...</span>
   </div>
 </div> <!-- /.loader -->
