--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -16,7 +16,7 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 16px;
-    text-transform: uppercase;
+    text-transform: lowercase;
     letter-spacing: 5px;
     color: $text;
     &:hover {
