--- a/_sass/3-modules/_loader.scss
+++ b/_sass/3-modules/_loader.scss
@@ -18,8 +18,9 @@
   padding: 10px;
   font-family: 'Nunito', sans-serif;
   font-size: 21px;
-  letter-spacing: .5em;
-  text-transform: uppercase;
+  /*letter-spacing: .5em;*/
+  letter-spacing: 0px;
+  text-transform: none;
   font-weight: 700;
   color: #fff;
   background: $black;
