--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col col-12">
         <div class="footer-top">
           <h2 class="logo-title">
-            <a href="{{site.baseurl}}/" class="logo-text">The earth is round, I want to wander around.</a>
+            <a href="{{site.baseurl}}/" class="logo-text">世界这么大，我想去看看 | The Earth is Round, I Want to Wander Around.</a>
           </h2>
           <div class="top"><i class="ion ion-ios-arrow-up"></i></div>
         </div>
