--- a/_includes/loader.html
+++ b/_includes/loader.html
@@ -1,5 +1,5 @@
 <div class="preloader">
   <div class="loader">
-    <span>Me.Moi.Mich</span>
+    <span>Me.Moi.Mich<br>Photography</span>
   </div>
 </div> <!-- /.loader -->
