--- a/_sass/4-layouts/_home.scss
+++ b/_sass/4-layouts/_home.scss
@@ -18,8 +18,8 @@
       font-size: 16px;
       font-weight: 700;
       line-height: 16px;
-      text-transform: uppercase;
-      letter-spacing: 5px;
+      text-transform: none;
+      letter-spacing: 0px;
       color: $text;
       &:hover {
         color: #fff;
