--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -5,7 +5,7 @@
         {% if paginator.previous_page %} {% if paginator.previous_page == 1 %}
         <li class="previous-posts">
           <a class="previous-link" href="{{ site.baseurl }}/">
-            <i class="ion ion-ios-arrow-back"></i> Previous posts</a>
+            <i class="ion ion-ios-arrow-back"></i> 前篇 Previous posts</a>
         </li>
         {% else %}
         <li class="newer-posts">
@@ -16,7 +16,7 @@
 
         {% if paginator.next_page %}
         <li class="older-posts">
-          <a class="older-link" href="{{ site.baseurl }}/page/{{ paginator.next_page }}/">Older posts
+          <a class="older-link" href="{{ site.baseurl }}/page/{{ paginator.next_page }}/">旧篇 Older posts
             <i class="ion ion-ios-arrow-forward"></i>
           </a>
         </li>
