--- a/_includes/loader.html
+++ b/_includes/loader.html
@@ -1,5 +1,5 @@
 <div class="preloader">
   <div class="loader">
-    <span>- In the Name of Light -</span>
+    <span>- In the Name of the Light -</span>
   </div>
 </div> <!-- /.loader -->
