--- a/_sass/4-layouts/_home.scss
+++ b/_sass/4-layouts/_home.scss
@@ -56,7 +56,7 @@
   list-style: none;
   overflow-y: auto;
   .menu-item {
-    text-align: center;
+    text-align: right;
   }
   .menu-link {
     position: relative;
