--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -191,14 +191,16 @@ table th {
   text-align: left;
   border: 1px solid $gray-blue;
   color: $white;
-  background-color: $primary-color;
+  background-color: transparent;
+  /*background-color: $primary-color;*/
 }
 
 table tr {
   background-color: lighten($primary-color, 45%);
   transition: all .3s ease;
   &:nth-child(even) {
-    background-color: $white;
+    /*background-color: $white;*/
+    background-color: transparent;
   }
 }
 
@@ -209,5 +211,6 @@ table td {
 }
 
 table tr:hover {
-  background-color: $white;
+  /*background-color: $white;*/
+  background-color: transparent;
 }
