--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -178,7 +178,7 @@ pre {
 
 table {
   font-size: 12px;
-  color:$black;
+  color:$white;
   width: 100%;
   border-width: 1px;
   border-color: $gray-blue;
@@ -196,7 +196,8 @@ table th {
 }
 
 table tr {
-  background-color: lighten($primary-color, 45%);
+  /*background-color: lighten($primary-color, 45%);*/
+  background-color: transparent;
   transition: all .3s ease;
   &:nth-child(even) {
     /*background-color: $white;*/
