--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -53,18 +53,18 @@
   </div>
 
   <div class="widget widget-newsletter">
-    <h3 class="widget-title">On my way</h3>
-    <div class="newsletter-subtitle">Get Interesting News</div>
-    <div class="newsletter-text">Receive the latest news via email.</div>
+    <h3 class="widget-title">歡迎 Hey!</h3>
+    <div class="newsletter-subtitle">聯繫我 Contact Me</div>
+    <div class="newsletter-text">Photography is A Philosophy in the Name of Light.</div>
     <form class="c-newsletter-form validate" action="{% if site.mailchimp %}//{{site.mailchimp}}{% else %}#{% endif %}" method="POST"
       id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
       <div class="newsletter-group">
         <div class="newsletter-group-top">
           <label class="screen-reader-text" for="mce-EMAIL">Email address</label>
           <i class="email-icon ion ion-ios-mail"></i>
-          <input class="newsletter-email required email" id="mce-EMAIL" type="text" name="EMAIL" placeholder="E-mail">
+          <input class="newsletter-email required email" id="mce-EMAIL" type="text" name="EMAIL" placeholder="hong.xu@live.cn">
         </div>
-        <input class="newsletter-button" id="mc-embedded-subscribe" type="submit" name="subscribe" value="Subscribe">
+        <input class="newsletter-button" id="mc-embedded-subscribe" type="submit" name="subscribe" value="Send E-mail">
       </div>
     </form>
   </div>
