--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -55,7 +55,7 @@
   <div class="widget widget-newsletter">
     <h3 class="widget-title">歡迎 Hey!</h3>
     <div class="newsletter-subtitle">聯繫我 Contact Me</div>
-    <div class="newsletter-text">Photography is A Philosophy in the Name of Light.</div>
+    <div class="newsletter-text">Photography is a Philosophy in the Name of the Light.</div>
     <form class="c-newsletter-form validate" action="{% if site.mailchimp %}//{{site.mailchimp}}{% else %}#{% endif %}" method="POST"
       id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
       <div class="newsletter-group">
