--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
         </div>
         <div class="footer-bottom">
           <div class="copyright">
-            <p>&copy; {{site.time | date: '%Y'}} | Xu, Hong | Doctoral Candidate @ ETH Zürich</p>
+            <p>&copy; {{site.time | date: '%Y'}} | HongX | Doctoral Candidate @ ETH Zürich</p>
           </div>
           <div class="footer-social">
             <ul class="list-reset">
