--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,7 @@
   {% endif %}
 
   <div class="widget widget-social">
-    <h3 class="widget-title">HongX | Photographer</h3>
+    <h3 class="widget-title">Hong | X-Grapher</h3>
     <ul class="social-profiles list-reset">
       {% if site.facebook %}
       <li class="social-profiles-item">
@@ -55,7 +55,7 @@
   <div class="widget widget-newsletter">
     <h3 class="widget-title">歡迎 Hey!</h3>
     <div class="newsletter-subtitle">聯繫我 Contact Me</div>
-    <div class="newsletter-text">Photography/Tomography.</div>
+    <div class="newsletter-text">Photon Photographer/X-ray Tomographer.</div>
     <form class="c-newsletter-form validate" action="{% if site.mailchimp %}//{{site.mailchimp}}{% else %}#{% endif %}" method="POST"
       id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
       <div class="newsletter-group">
