--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -62,7 +62,7 @@
         <div class="newsletter-group-top">
           <label class="screen-reader-text" for="mce-EMAIL">Email address</label>
           <i class="email-icon ion ion-ios-mail"></i>
-          <input class="newsletter-email required email" id="mce-EMAIL" type="text" name="EMAIL" placeholder="hong.xu@live.cn">
+          <input class="newsletter-email required email" id="mce-EMAIL" type="text" name="EMAIL" placeholder="helios.xu@outlook.com">
         </div>
         <input class="newsletter-button" id="mc-embedded-subscribe" type="submit" name="subscribe" value="Send E-mail">
       </div>
